--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Tejal Chinoy</title>
 
   <!--
     - favicon
@@ -46,9 +46,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+          <h1 class="name" title="Tejal Chinoy">Tejal Chinoyk</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Plant Lover, Avid Reader, Wannabe GlobeTrotter</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+              <a href="mailto:tchinoy@yahoo.com" class="contact-link">tchinoy@yahoo.com</a>
             </div>
 
           </li>
