--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Tejal" content="width=device-width, initial-scale=1.0">
   <title>Tejal Chinoy</title>
 
   <!--
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Tejal Chinoy" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Tejal Chinoy">Tejal Chinoyk</h1>
+          <h1 class="name" title="Tejal Chinoy">Tejal Chinoy</h1>
 
           <p class="title">Plant Lover, Avid Reader, Wannabe GlobeTrotter</p>
         </div>
