--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ Geek<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Tejal Chinoy">Tejal Chinoy</h1>
 
-          <p class="title">Plant Lover/Avid Reader/Wannabe GlobeTrotter</p>
+          <p class="title">Empoweriung Girls in STEM</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -79,19 +79,6 @@
 
           </li>
 
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+16198718104" class="contact-link">+1 (619) 871-8104</a>
-            </div>
-
-          </li>
 
           <li class="contact-item">
 
@@ -196,18 +183,17 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I've embarked on an exhilarating journey, transitioning from a three-decade corporate career to pursue my true passion: 
+            inspiring middle and high school girls to delve into the world of STEM. With a wealth of experience under my belt,          
+            I've redirected my focus towards fostering enthusiasm and confidence in these young minds, advocating for greater 
+            diversity and representation in STEM fields. My mission is to ignite a spark of curiosity and empowerment, guiding the 
+            next generation of female leaders towards exciting opportunities in science, technology, engineering, and mathematics..
           </p>
-
+<!--
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            paragraph 2 if needed
           </p>
+          --!>
         </section>
 
 
@@ -224,15 +210,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-design.svg " alt="Mentoring" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Mentoring</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Mentoring middle scxhool and high school girls in STEM.
                 </p>
               </div>
 
@@ -241,14 +226,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Career Counselling" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Career Counselling</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Personalized career counselling for girls in underserved communities.
                 </p>
               </div>
 
@@ -257,14 +242,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="Feeding" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Sharing fresh produce from backyards to the low income families and senior in the community.
                 </p>
               </div>
 
@@ -277,10 +262,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Refugees</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Supporting new refugees by offering English language instruction and fistrering their integration.
                 </p>
               </div>
 
@@ -290,7 +275,7 @@
 
         </section>
 
-
+<!-- ------------------------------------------------------------------
         <!--
           - testimonials
         -->
@@ -488,7 +473,7 @@
           </ul>
 
         </section>
-
+------------------------------------------------------------------ --!>
       </article>
 
 
