--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Tejal Chinoy">Tejal Chinoy</h1>
 
-          <p class="title">Empoweriung Girls in STEM</p>
+          <p class="title">Empowering Girls in STEM</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -189,11 +189,26 @@
             diversity and representation in STEM fields. My mission is to ignite a spark of curiosity and empowerment, guiding the 
             next generation of female leaders towards exciting opportunities in science, technology, engineering, and mathematics..
           </p>
-<!--
+
           <p>
-            paragraph 2 if needed
+            I am deeply committed to empowering girls in underserved communities through personalized career counseling, recognizing
+            the transformative impact it can have on their lives. By tailoring guidance to their unique strengths, interests, and 
+            aspirations, I aim to unlock their full potential and open doors to opportunities in diverse fields. Through this approach,
+            I strive to pave the way for brighter futures, equipping them with the tools and confidence needed to pursue their dreams and
+            contribute meaningfully to society. It's a journey of empowerment, advocacy, and belief in the inherent capabilities of every young
+            woman, regardless of her background or circumstances.
           </p>
-          --!>
+         
+         <p>
+            As an active member of my community, I am deeply invested in various initiatives aimed at fostering inclusivity and support for those in need.
+            Guided by a genuine passion for social justice, I take pride in my role in facilitating the integration of new refugees into our society. 
+            By providing practical assistance, emotional support, and access to resources, I strive to make their transition smoother and more manageable.
+            Additionally, I am committed to addressing the pressing issue of food insecurity among low-income families. Recognizing the profound impact of hunger
+            on individuals and communities, I am actively involved in an initiative that provide fresh produce to those facing financial hardship. In both these
+            endeavors, my goal is to create a more compassionate and inclusive community where everyone has the opportunity to thrive. Through hands-on involvement
+            and collaborative efforts, I seek to make a meaningful difference in the lives of those facing adversity, fostering a sense of belonging and solidarity
+            within our community.
+         </p>
         </section>
 
 
