--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">What I'm doing</h3>
 
           <ul class="service-list">
 
@@ -210,8 +210,7 @@
                 <h4 class="h4 service-item-title">Career Counselling</h4>
 
                 <p class="service-item-text">
-                  Personalized career counselling for girls in underserved communities.
-                 
+                  Personalized career counselling for girls in underserved communities.                 
                 </p>
               </div>
 
@@ -225,7 +224,7 @@
         - #PROJECTS
       -->
 
-      <article class="project" data-page="project">
+      <article class="project" data-page="projects">
 
         <header>
           <h2 class="h2 article-title">Projects</h2>
