--- a/index.html
+++ b/index.html
@@ -422,6 +422,23 @@
 
         </section>
 
+       <!--
+        - #INTERESTS
+      -->
+
+      <article class="about  active" data-page="interests">
+
+        <header>
+          <h2 class="h2 article-title">Interests</h2>
+        </header>
+
+        <section class="about-text">
+          <p>
+            Plants, Books, Travel, Wine
+          </p>      
+        </section>
+
+
       </article>
 
     </div>
