--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         - #PROJECTS
       -->
 
-      <article class="project" data-page="projects">
+      <article class="projects" data-page="projects">
 
         <header>
           <h2 class="h2 article-title">Projects</h2>
@@ -426,13 +426,13 @@
         - #INTERESTS
       -->
 
-      <article class="about  active" data-page="interests">
+      <article class="interests" data-page="interests">
 
         <header>
           <h2 class="h2 article-title">Interests</h2>
         </header>
 
-        <section class="about-text">
+        <section class="interests-text">
           <p>
             Plants, Books, Travel, Wine
           </p>      
