--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>projectss</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
           <li class="navbar-item">
