--- a/index.html
+++ b/index.html
@@ -586,8 +586,8 @@
 
               <p class="timeline-text">
                 <ul>
-                  <p>Mentoring for my personal project-  data analysis in Python, creating and sourcing data of binary stars/pulsars using Lightkurve library for Python, focusing on Kepler 47 system</p>
-                  <p>Creating a personal website as web dev preactise</p>
+                  <li>Mentoring for my personal project-  data analysis in Python, creating and sourcing data of binary stars/pulsars using Lightkurve library for Python, focusing on Kepler 47 system</li>
+                  <li>Creating a personal website as web dev preactise</li>
                 </ul>
                
               </p>
@@ -602,10 +602,10 @@
 
               <p class="timeline-text">
                 <ul>
-                  <p>Full scholarship for a two-semester quantum computing course</p>
-                  <p>Programming in Cirq</p>
-                  <p>Fundamentals and Applications of Quantum Computing</p>
-                  <p>Quantum algorithms and protocols, including implementing quantum key distribution (QKD) and Grover's algorithm, as well as running a Variational Quantum Eigensolver (VQE) to simulate a molecule</p>
+                  <li>Full scholarship for a two-semester quantum computing course</li>
+                  <li>Programming in Cirq</li>
+                  <li>Fundamentals and Applications of Quantum Computing</li>
+                  <li>Quantum algorithms and protocols, including implementing quantum key distribution (QKD) and Grover's algorithm, as well as running a Variational Quantum Eigensolver (VQE) to simulate a molecule</li>
                 </ul>
               </p>
 
@@ -619,9 +619,9 @@
 
               <p class="timeline-text">
                 <ul>
-                  <p>Led the successful development of four dynamic game projects using JavaScript, highlighting technical expertise and adaptability in a fast-paced learning environment.</p>
-                  <p>Cultivated a collaborative and communicative team environment by actively engaging with fellow participants, contributing ideas, and collaboratively problem-solving to create captivating game mechanics that engaged players.</p>
-                  <p>Advocated for diversity and inclusivity in the gaming industry by incorporating accessible design elements into each project, making the games enjoyable for a broader audience and promoting positive social impact through gaming.</p>
+                  <li>Led the successful development of four dynamic game projects using JavaScript, highlighting technical expertise and adaptability in a fast-paced learning environment.</li>
+                  <li>Cultivated a collaborative and communicative team environment by actively engaging with fellow participants, contributing ideas, and collaboratively problem-solving to create captivating game mechanics that engaged players.</li>
+                  <li>Advocated for diversity and inclusivity in the gaming industry by incorporating accessible design elements into each project, making the games enjoyable for a broader audience and promoting positive social impact through gaming.</li>
                 </ul>
               </p>
 
