--- a/index.html
+++ b/index.html
@@ -203,14 +203,29 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Career Counselling" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Career Counseling" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Career Counselling</h4>
+                <h4 class="h4 service-item-title">Career Counseling</h4>
 
                 <p class="service-item-text">
-                  Personalized career counselling for girls in underserved communities.                 
+                  Personalized career counseling for girls in underserved communities.                 
+                </p>
+              </div>
+
+            </li>       
+           <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Community Service" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Community Service</h4>
+
+                <p class="service-item-text">
+                  Providing direct support to individuals and families in need.                
                 </p>
               </div>
 
