--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+<!--          <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg " alt="Mentoring" width="40">
               </div>
-
+-->
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Mentoring</h4>
 
@@ -202,10 +202,10 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+<!--              <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.svg" alt="Career Counseling" width="40">
               </div>
-
+-->
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Career Counseling</h4>
 
@@ -217,10 +217,10 @@
             </li>       
            <li class="service-item">
 
-              <div class="service-icon-box">
+<!--              <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.svg" alt="Community Service" width="40">
               </div>
-
+-->
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Community Service</h4>
 
