--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           - service
         -->
 
-        <article class="service" data-page="service">
+        <article class="service">
 
           <h3 class="h3 service-title">What I'm doing</h3>
 
@@ -239,7 +239,7 @@
         - #projects
       -->
 
-      <article class="projects active" data-page="projects">
+      <article class="projects" data-page="projects">
 
         <header>
           <h2 class="h2 article-title">Projects</h2>
