--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- Geek<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -171,13 +171,13 @@
             diversity and representation in STEM fields. My mission is to ignite a spark of curiosity and empowerment, guiding the 
             next generation of female leaders towards exciting opportunities in science, technology, engineering, and mathematics..
           </p>      
-       
+        </section>
 
         <!--
           - service
         -->
 
-        <article class="service">
+        <section class="service">
 
           <h3 class="h3 service-title">What I'm doing</h3>
 
@@ -232,6 +232,7 @@
           </ul>
 
         </section>
+    </article>
      
 
       <!--
@@ -435,6 +436,7 @@
           </ul>
 
         </section>
+      </article>
 
        <!--
         - #INTERESTS
