--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
               <a href="#">
                 <div class="projects-content">
                   <div class="projects-meta">
-                    <p class="projects-category">Design</p>
+                    <p class="projects-category">Mentoring</p>
                     <span class="dot"></span>
                   </div>
-                  <h3 class="h3 projects-item-title">Design conferences in 2022</h3>
+                  <h3 class="h3 projects-item-title">Mentoring with MAGIC</h3>
                   <p class="projects-text">          
             I am also deeply committed to empowering girls in underserved communities through personalized career counseling, recognizing
             the transformative impact it can have on their lives. By tailoring guidance to their unique strengths, interests, and 
@@ -170,7 +170,26 @@
               <a href="#">
                 <div class="projects-content">
                   <div class="projects-meta">
-                    <p class="projects-category">Design</p>
+                    <p class="projects-category">Mentoring</p>
+                    <span class="dot"></span>
+                  </div>
+                  <h3 class="h3 projects-item-title">Career Mentoring with Schools in India</h3>
+                  <p class="projects-text">          
+            I am also deeply committed to empowering girls in underserved communities through personalized career counseling, recognizing
+            the transformative impact it can have on their lives. By tailoring guidance to their unique strengths, interests, and 
+            aspirations, I aim to unlock their full potential and open doors to opportunities in diverse fields. Through this approach,
+            I strive to pave the way for brighter futures, equipping them with the tools and confidence needed to pursue their dreams and
+            contribute meaningfully to society. It's a journey of empowerment, advocacy, and belief in the inherent capabilities of every young
+            woman, regardless of her background or circumstances.   
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="projects-post-item">
+              <a href="#">
+                <div class="projects-content">
+                  <div class="projects-meta">
+                    <p class="projects-category">Community</p>
                     <span class="dot"></span>
                   </div>
                   <h3 class="h3 projects-item-title">Best fonts every designer</h3>
