--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <p class="projects-category">Community</p>
                     <span class="dot"></span>
                   </div>
-                  <h3 class="h3 projects-item-title">Best fonts every designer</h3>
+                  <h3 class="h3 projects-item-title">Backyard Produce Project</h3>
                   <p class="projects-text">               
             As an active member of my community, I am deeply invested in various initiatives aimed at fostering inclusivity and support for those in need.
             Guided by a genuine passion for social justice, I take pride in my role in facilitating the integration of new refugees into our society. 
