--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <header>
           <h2 class="h2 article-title">Interests</h2>
         </header>
-        <section class="interests-text">
+        <section class="projects-text">
           <p>
             Plants, Books, Travel, Wine
           </p>      
